<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.inetsoft.test</groupId>
        <artifactId>datatest</artifactId>
        <version>1.0.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>vsothers</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <test.module>vscalc</test.module>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.athaydes</groupId>
            <artifactId>spock-reports</artifactId>
            <version>2.5.1-groovy-4.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.inetsoft.test</groupId>
            <artifactId>commons</artifactId>
            <version>1.0.0-SNAPSHOT</version>
            <scope>runtime</scope>
            <classifier>tests</classifier>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <additionalClasspathElements>
                        <element>../commons/target/test-classes</element>
                        <element>../docker/src/test/config/orders.jar</element>
                    </additionalClasspathElements>
                    <argLine>-Xmx1g -Dfile.encoding=UTF-8
                        -XX:ReservedCodeCacheSize=100m -XX:+UseCodeCacheFlushing
                        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
                        --add-opens=java.base/jdk.internal.access=ALL-UNNAMED
                        --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
                        --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
                        --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
                        --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
                        --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
                        --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
                        --add-opens=java.base/java.io=ALL-UNNAMED
                        --add-opens=java.base/java.nio=ALL-UNNAMED
                        --add-opens=java.base/java.net=ALL-UNNAMED
                        --add-opens=java.base/java.util=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
                        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
                        --add-opens=java.base/java.lang=ALL-UNNAMED
                        --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
                        --add-opens=java.base/java.math=ALL-UNNAMED
                        --add-opens=java.sql/java.sql=ALL-UNNAMED
                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens=java.base/java.time=ALL-UNNAMED
                        --add-opens=java.base/java.text=ALL-UNNAMED
                        --add-opens=java.management/sun.management=ALL-UNNAMED
                    </argLine>
                    <includes>
                        <!--<include>**/*_Case.groovy</include>-->
                        <include>**/*Spec</include>
                    </includes>
                    <systemPropertyVariables>
                        <show.license.exception>true</show.license.exception>
                        <com.athaydes.spockframework.report.outputDir>target/spock-reports</com.athaydes.spockframework.report.outputDir>
                        <disable.updateAssetDependencies>true</disable.updateAssetDependencies>
                        <sree.home>target/test-resources/server/config-${test.module}</sree.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.inetsoft.stylebi.build</groupId>
                <artifactId>inetsoft-runner-maven-plugin</artifactId>
                <version>1.0.0-SNAPSHOT</version>
                <executions>
                    <execution>
                        <id>configure-server</id>
                        <phase>generate-test-resources</phase>
                        <goals>
                            <goal>configure</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configFile>../docker/src/test/config/${inetsoft.storage.type}/inetsoft.yaml</configFile>
                    <backupFile>src/test/resources/config/${test.module}_storage.zip</backupFile>
                    <configDirectory>target/test-resources/server/config-${test.module}</configDirectory>
                    <properties>
                        <license.key>${inetsoft.license.key}</license.key>
                        <log.level.org.apache.ignite>WARN</log.level.org.apache.ignite>
                        <security.enabled>true</security.enabled>
                        <security.login.orgLocation>domain</security.login.orgLocation>
                    </properties>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>vscalc</id>
            <properties>
                <test.module>vscalc</test.module>
            </properties>
        </profile>
    </profiles>
</project>
